# DeepRL-CNN-Snake

./: Numba配置说明.md  README.md  RETRAIN_USAGE.md  agent.py  cnn_features.py  config.py  convert_log_to_json.py  game.py  help_nb.py  hyperparameter_optimization_log.txt  initial_hyperparameters.json  memory.py  model.py  optimize_hyperparameters.py  test_bfs_safety.py  train.py  training.py
help/: test_cpp_functions.py
help/C++_help/: CMakeLists.txt  README.md  batch_retrieve_cc.cc  batch_retrieve_final.cc  batch_retrieve_fixed.cc  build.bat  distance_cc.cc  final_test.py  get_action_history_onehot_cc.cc  get_action_history_onehot_final.cc  get_all_grid_view_cc.cc  get_all_grid_view_final.cc  get_boundary_distances_cc.cc  get_direction_onehot_cc.cc  get_eight_direction_dangers_cc.cc  get_eight_direction_dangers_final.cc  get_food_pos_cc.cc  get_free_space_ratio_cc.cc  get_head_pos_cc.cc  get_local_grid_view_cc.cc  get_local_grid_view_final.cc  get_manhattan_distance_cc.cc  get_relative_distance_cc.cc  get_snake_length_cc.cc  help_cpp.h  init.cc  is_collision_cc.cc  is_collision_final.cc  place_food_cc.cc  propagate_cc.cc  random_position_cc.cc  retrieve_cc.cc  safe_action_cc.cc  safe_action_final.cc  setup.py  snake_helpers.cpp  step_logic_cc.cc  step_logic_final.cc  update_direction_cc.cc  update_direction_final.cc
help/Python_help/: help_py.py
help/numba_help/: help_nb.py
models/: snake_dqn_best.pth  snake_dqn_ep7000_sc25.pth
